html routes working

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,5 +1,5 @@
 body {
-  background: url('../images/backflip-1920.jpg') no-repeat center center fixed;
+  background: url('../img/backflip-1920.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
