--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <p id="instructions">Create your own deck of study flash-cards by entering a subject and then five questions, each with a
                         hint and an answer. You can choose to play your deck or another one from the view decks page.</p>
-                    <form>
+                    <form action="/" method="post">
                         <div class="form-group">
                             <label for="subject">
                                 <h2>Subject</h2>
