--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,84 @@
                                     <br>Create your own deck
                                     <br>and
                                     <br>share with your friends!</p>
-                                <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up/Log In</a>
+                                <button onclick="document.getElementById('id01').style.display='block'">Login</button>
+
+                                <!-- The Modal -->
+                                <div id="id01" class="modal">
+                                    <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+
+
+                                    <form class="modal-content animate" action="/" method="post">
+                                        {{!-- <div class="imgcontainer">
+                                            <img src="img_avatar2.png" alt="Avatar" class="avatar">
+                                        </div> --}}
+
+                                        <div class="container">
+                                            <label for="uname">
+                                                <b>Username</b>
+                                            </label>
+                                            <input type="text" placeholder="Username" name="logusername" required="">
+
+                                            <label for="psw">
+                                                <b>Password</b>
+                                            </label>
+                                            <input type="password" placeholder="Enter Password" name="logpassword" required="">
+
+                                            <div class="tp">
+                                                <input type="submit" value="LOGIN NOW">
+                                            </div>
+                                        </div>
+
+                                        <div class="container" style="background-color:#f1f1f1">
+                                            <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+                                            <span class="psw">Forgot
+                                                <a href="#">password?</a>
+                                            </span>
+                                        </div>
+                                    </form>
+                                </div>
+
+                                <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Sign Up</button>
+
+                                <div id="id02" class="modal2">
+                                    <span onclick="document.getElementById('id02').style.display='none'" class="close2" title="Close Modal">&times;</span>
+                                    <form class="modal-content2" action="/" method="post">
+                                        <div class="container">
+                                            <h1>Sign Up</h1>
+                                            <p>Please fill in this form to create an account.</p>
+                                            <hr>
+                                            <label for="email">
+                                                <b>Email</b>
+                                            </label>
+                                            <input type="text" placeholder="Enter Email" name="email" required>
+
+                                            <input type="text" name="username" placeholder="Username" required>
+
+                                            <label for="password">
+                                                <b>Password</b>
+                                            </label>
+                                            <input type="password" placeholder="Enter Password" name="password" required>
+
+                                            <label for="passwordConf">
+                                                <b>Repeat Password</b>
+                                            </label>
+                                            <input type="password" placeholder="Confirm Password" name="passwordConf" required>
+
+                                            <label>
+                                                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+                                            </label>
+
+                                            <p>By creating an account you agree to our
+                                                <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
+
+                                            <div class="clearfix">
+                                                <button type="submit" value="" class="signupbtn">Sign Up</button>
+                                                <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn2">Cancel</button>
+
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
