--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -5,7 +5,7 @@
             <a class="nav-link" href="/create">Create Deck</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/view">View Decks</a>
+            <a type="button" href="/logout">Logout</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/play">Play Deck</a>
