--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -92,10 +92,12 @@ h3 {
   background: rgba(211, 211, 211);
   margin-top: 5em;
   border: 5px solid black;
+  font-weight: bold;
+  font-size: 1.25em;
 }
 thead {
   color: orangered;
-  font-size: 1.25em;
+  font-size: 1.5em;
 }
 
 /*flash card and text styles*/
