--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -29,8 +29,12 @@
                             {{#each Decks}}
                             <tr>
                                 <td>{{this.deck_name}}</td>
-                                <td>
-                                    <button></button>
+                                <td class="text-center">
+                                    <form class="get-deck" action="api/cards/{{this.deck_name}}?_method=GET" method="GET">
+                                        <input type="hidden" value={{this.deck_name}}>
+                                        <button class="btn btn-primary" id="play-deck" type="submit">Play Deck</button>
+
+                                    </form>
                                 </td>
                             </tr>
                             {{/each}}
