--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Finger+Paint|Freckle+Face|Slackey" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/css/custom.css">
+    <link type rel="stylesheet" href="assets/css/custom.css">
 </head>
 
 
