--- a/views/play.handlebars
+++ b/views/play.handlebars
@@ -13,9 +13,17 @@
     </ul>
 </nav>
 <div class="container">
+    <div class="row">
+        <div class="col-lg-3"></div>
+        <div class="col-lg-6">
+            <div class="card text-center" id="play-title">
+                <h1>subject</h1>
+            </div>
+        </div>
+    </div>
+
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-            {{#each Cards}}
             <div class="carousel-item active">
                 <div class="card-flip">
                     <div class="flip">
@@ -38,7 +46,95 @@
                     </div>
                 </div>
             </div>
-            {{/each}}
+            <div class="carousel-item">
+                <div class="card-flip">
+                    <div class="flip">
+                        <div class="front">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 id="flash-title">{{this.question2}}</h2>
+                                    <p id="flash-text">{{this.hint2}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 class="flash-title">{{this.answer2}}</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-flip">
+                    <div class="flip">
+                        <div class="front">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 id="flash-title">{{this.question3}}</h2>
+                                    <p id="flash-text">{{this.hint3}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 class="flash-title">{{this.answer3}}</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-flip">
+                    <div class="flip">
+                        <div class="front">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 id="flash-title">{{this.question4}}</h2>
+                                    <p id="flash-text">{{this.hint4}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 class="flash-title">{{this.answer4}}</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="card-flip">
+                    <div class="flip">
+                        <div class="front">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 id="flash-title">{{this.question5}}</h2>
+                                    <p id="flash-text">{{this.hint5}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="back">
+                            <div class="card text-center flash-card">
+                                <div class="card-body flash-body">
+                                    <h2 class="flash-title">{{this.answer5}}</h2>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
