--- a/views/play.handlebars
+++ b/views/play.handlebars
@@ -17,7 +17,7 @@
         <div class="col-lg-3"></div>
         <div class="col-lg-6">
             <div class="card text-center" id="play-title">
-                <h1>subject</h1>
+                <h1>{{this.deck_name}}</h1>
             </div>
         </div>
     </div>
