re-did authorization

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -5,7 +5,7 @@
             <a class="nav-link" href="/create">Create Deck</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/view">View Decks</a>
+            <a class="nav-link" href="/profile">View Decks</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/play">Play Deck</a>
@@ -20,7 +20,7 @@
                 <div class="card-body">
                     <p id="instructions">Create your own deck of study flash-cards by entering a subject and then five questions, each with a
                         hint and an answer. You can choose to play your deck or another one from the view decks page.</p>
-                    <form action="/" method="post">
+                    <form>
                         <div class="form-group">
                             <label for="subject">
                                 <h2>Subject</h2>
