--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -134,7 +134,7 @@ input[type=text], input[type=password] {
     margin: 3.7em 0 0;
 }
 /* Set a style for all buttons */
-/* button {
+button {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
@@ -146,7 +146,7 @@ input[type=text], input[type=password] {
 
 button:hover {
     opacity: 0.8;
-} */
+}
 
 /* Extra styles for the cancel button */
 .cancelbtn {
@@ -259,8 +259,10 @@ input[type=text]:focus, input[type=password]:focus {
     outline: none;
 }
 
-
-
+.signupbtn {
+    padding: 14px 20px;
+    background-color: #3662f4;
+}
 /* Extra styles for the cancel button */
 .cancelbtn2 {
     padding: 14px 20px;
@@ -331,7 +333,7 @@ hr {
 
 /* Change styles for cancel button and signup button on extra small screens */
 @media screen and (max-width: 300px) {
-    .cancelbtn, .signupbtn {
+    .cancelbtn2, .signupbtn {
        width: 100%;
     }
 }
